# bites

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.default  sdkconfig.old
components/bites_i2s_stream/: CMakeLists.txt  bites_i2s_stream.c  board.c  board_pins_config.c
components/bites_i2s_stream/include/: bites_i2s_stream.h  board_def.h
components/bites_i2s_stream/my_board/my_board_v1_0/: board_pins_config.c
components/gpio_control/: CMakeLists.txt  Kconfig.projbuild  gpio_control.c
components/gpio_control/include/: gpio_control.h
components/http_server/: CMakeLists.txt  Kconfig.projbuild  http_server.c
components/http_server/include/: http_server.h
components/sntp/: CMakeLists.txt  Kconfig.projbuild  sntp.c
components/storas/: CMakeLists.txt  storas.c
components/storas/include/: storas.h
components/time_control/: CMakeLists.txt  Kconfig.projbuild  time_control.c
components/time_control/include/: time_control.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  wifi.c
components/wifi/include/: wifi.h
components/wifi_ap/: CMakeLists.txt  wifi_ap.c
components/wifi_ap/include/: wifi_ap.h
components/wifi_sta/: CMakeLists.txt  Kconfig.projbuild  wifi_sta.c
components/wifi_sta/include/: wifi_sta.h
main/: Kconfig.projbuild  idf_component.yml  main.c  sntp_example_main.c
